# faststream-schema-registry

./: .coverage  .pre-commit-config.yaml  404.html  README.md  index.html  objects.inv  pyproject.toml  tox.ini
.github/workflows/: changelog-ci.yml  create-release.yml  publish-package.yml  python-app.yml
api/: index.html
middleware/: index.html
search/: search_index.json
src/faststream_schema_registry/: middleware.py  models.py  registries.py  utils.py
tests/: test_registries.py
