[project]
name = "faststream-schema-registry"
version = "0.1.3a1"
description = ""
authors = [
    {name = "Mark Lovretovich", email = "mlovretovich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "faststream",
    "dataclasses-avroschema==0.65.*",
    "python-schema-registry-client",
    "faker"
]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
addopts = " -rP --cov=faststream_schema_registry --cov-report xml:coverage.xml -vvv"
asyncio_mode = "auto"

[tool.poetry]
packages = [{include= "faststream_schema_registry", from = "src"}]

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
pytest-cov = "*"
pytest-asyncio = "*"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
