[project]
name = "faststream-schema-registry"
version = "0.1.3a1"
description = ""
authors = [
    {name = "Mark Lovretovich", email = "mlovretovich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
addopts = " -rP --cov=faststream_schema_registry"
asyncio_mode = "auto"


[tool.poetry]
packages = [{include= "faststream_schema_registry", from = "src"}]


[tool.poetry.dependencies]
faststream = "0.5.*"
python-schema-registry-client = "2.6.*"
dataclasses-avroschema = {extras = ["faker","pydantic"], version = "0.65.*"}



[tool.poetry.group.test.dependencies]
mypy = "^1"
ruff = ">=0.8,<0.10"
pytest = ">=7,<9"
pytest-cov = ">=4,<6"
pytest-mock = "^3.10.0"

pytest-asyncio = "*"
codecov = "^2.1.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
